# advent-of-code-2024

./: .gitignore  CMakeLists.txt  main.cpp
day01/: day01.cpp  day01.h
day02/: day02.cpp  day02.h
day03/: day03.cpp  day03.h
day04/: day04.cpp  day04.h
day05/: day05.cpp  day05.h
day06/: day06.cpp  day06.h
day07/: day07.cpp  day07.h
day08/: day08.cpp  day08.h
day09/: day09.cpp  day09.h
day10/: day10.cpp  day10.h
day11/: day11.cpp  day11.h
day12/: day12.cpp  day12.h
day13/: day13.cpp  day13.h
day14/: day14.cpp  day14.h
day15/: day15.cpp  day15.h
day16/: day16.cpp  day16.h
day17/: day17.cpp  day17.h
day18/: day18.cpp  day18.h
day19/: day19.cpp  day19.h
day20/: day20.cpp  day20.h
day21/: day21.cpp  day21.h
day22/: day22.cpp  day22.h
day23/: day23.cpp  day23.h
day24/: day24.cpp  day24.h
day25/: day25.cpp  day25.h
util/: util.cpp  util.h
